stock patch extended
